--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="./styles.css" type="text/css"/>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Catalogue</li>
+                <li>Financing</li> 
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </header>
     <h1>CARSS</h1>
     
 </body>
