Heading added and the Introduction

--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
             </ul>
         </nav>
     </header>
+    <section class="intro">
+        <img src="./images/abnasser logo.jpeg" alt="Company's logo">
+        <h1>TOYOTA CATALOG by Abnasser Motors</h1>
+        <p>Test, Buy and Drive</p>
+    </section>
+    <section class="about">
+
+
+        <h2>Welcome to Abnasser Motors - Your Premier Toyota Vehicle Importer in Kenya</h2>
+        <p> At Abnasser Motors, we specialize in importing high-quality Toyota vehicles directly from international markets to Kenya. With years of experience in the automotive industry, we pride ourselves on delivering reliable, well-maintained Toyota vehicles that meet the diverse needs of Kenyan drivers.
+            Visit our showroom in Nairobi or contact us today to start your journey towards owning your ideal Toyota vehicle.
+            BELOW IS A CATALOGUE OF OUR NEW AND RECENT IMPORTS!!</p>
+
+
+    </section>
     <h1>CARSS</h1>
     
 </body>
