styling changes have been applied to the logo, h1 and the first p

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
         </nav>
     </header>
     <section class="intro">
-        <img src="./images/abnasser logo.jpeg" alt="Company's logo">
+        <img src="./images/abnasser logo.jpeg" alt="Company's logo" class="logo">
+        <div>
         <h1>TOYOTA CATALOG by Abnasser Motors</h1>
         <p>Test, Buy and Drive</p>
+    </div>
     </section>
     <section class="about">
 
@@ -32,7 +34,6 @@
 
 
     </section>
-    <h1>CARSS</h1>
     
 </body>
 </html>
