line breaker added and styled

--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         <img src="./images/abnasser logo.jpeg" alt="Company's logo" class="logo">
         <div>
         <h1>TOYOTA CATALOG by Abnasser Motors</h1>
-        <p>Test, Buy and Drive</p>
+        <p>Test, Buy and Drive</p>        
     </div>
     </section>
+    <hr class="divider">
     <section class="about">
 
 
