first image added. And styled.

--- a/index.html
+++ b/index.html
@@ -17,22 +17,33 @@
             </ul>
         </nav>
     </header>
-    <section class="intro">
+    <main>
+     <section class="intro">
         <img src="./images/abnasser logo.jpeg" alt="Company's logo" class="logo">
         <div>
         <h1>TOYOTA CATALOG by Abnasser Motors</h1>
         <p>Test, Buy and Drive</p>        
-    </div>
-    </section>
-    <hr class="divider">
-    <section class="about">
+        </div>
+     </section>
+     <hr class="divider">
+     <section class="about">
         <h2>Welcome to Abnasser Motors - Your Premier Toyota Vehicle Importer in Kenya</h2>
         <p> At Abnasser Motors, we specialize in importing high-quality Toyota vehicles directly from international markets to Kenya. With years of experience in the automotive industry, we pride ourselves on delivering reliable, well-maintained Toyota vehicles that meet the diverse needs of Kenyan drivers.
             Visit our showroom in Nairobi or contact us today to start your journey towards owning your ideal Toyota vehicle.
-            BELOW IS A CATALOGUE OF OUR NEW AND RECENT IMPORTS!!</p>
-
-
-    </section>
-    
+            </p>              
+     </section>
+     <section classs="catalog">
+        <h2 class="head2">BELOW IS A CATALOGUE OF OUR NEW AND RECENT IMPORTS!!</h2>
+        <div class="catalogue">
+            <div class="car">
+                <img src="./images/Toyota Corolla Cross GR-Sport - BR version 2022.jpeg" alt="Image of Toyota corolla cross 2025"
+                 class="car-image">
+                <p class="imagetext">TOYOTA COROLLA CROSS 2025</p>
+                <p class="imagetext">Engine: 2.0L FOUR CYLINDER</p>
+                <p class="imagetext">5 SEATER</p>
+                <p class="imagetext">Price: $19,5000</p>
+            </div>
+     </section>
+    </main>  
 </body>
 </html>
