Catalogue images added to html

--- a/index.html
+++ b/index.html
@@ -43,6 +43,46 @@
                 <p class="imagetext">5 SEATER</p>
                 <p class="imagetext">Price: $19,5000</p>
             </div>
+            <div class="car">
+                <img src="./images/Toyota Corolla Cross GR-Sport - BR version 2022.jpeg" alt="Image of Toyota corolla cross 2025"
+                 class="car-image">
+                <p class="imagetext">TOYOTA COROLLA CROSS 2025</p>
+                <p class="imagetext">Engine: 2.0L FOUR CYLINDER</p>
+                <p class="imagetext">5 SEATER</p>
+                <p class="imagetext">Price: $19,5000</p>
+            </div>
+            <div class="car">
+                <img src="./images/Toyota Corolla Cross GR-Sport - BR version 2022.jpeg" alt="Image of Toyota corolla cross 2025"
+                 class="car-image">
+                <p class="imagetext">TOYOTA COROLLA CROSS 2025</p>
+                <p class="imagetext">Engine: 2.0L FOUR CYLINDER</p>
+                <p class="imagetext">5 SEATER</p>
+                <p class="imagetext">Price: $19,5000</p>
+            </div>
+            <div class="car">
+                <img src="./images/Toyota Corolla Cross GR-Sport - BR version 2022.jpeg" alt="Image of Toyota corolla cross 2025"
+                 class="car-image">
+                <p class="imagetext">TOYOTA COROLLA CROSS 2025</p>
+                <p class="imagetext">Engine: 2.0L FOUR CYLINDER</p>
+                <p class="imagetext">5 SEATER</p>
+                <p class="imagetext">Price: $19,5000</p>
+            </div>
+            <div class="car">
+                <img src="./images/Toyota Corolla Cross GR-Sport - BR version 2022.jpeg" alt="Image of Toyota corolla cross 2025"
+                 class="car-image">
+                <p class="imagetext">TOYOTA COROLLA CROSS 2025</p>
+                <p class="imagetext">Engine: 2.0L FOUR CYLINDER</p>
+                <p class="imagetext">5 SEATER</p>
+                <p class="imagetext">Price: $19,5000</p>
+            </div>
+            <div class="car">
+                <img src="./images/Toyota Corolla Cross GR-Sport - BR version 2022.jpeg" alt="Image of Toyota corolla cross 2025"
+                 class="car-image">
+                <p class="imagetext">TOYOTA COROLLA CROSS 2025</p>
+                <p class="imagetext">Engine: 2.0L FOUR CYLINDER</p>
+                <p class="imagetext">5 SEATER</p>
+                <p class="imagetext">Price: $19,5000</p>
+            </div>
      </section>
     </main>  
 </body>
