--- a/index.html
+++ b/index.html
@@ -85,5 +85,8 @@
             </div>
      </section>
     </main>  
+    <footer>
+        <p>@2025 ABNASSER MOTORS. All rights reserved.</p>
+    </footer>
 </body>
 </html>
