header styled and wording added

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
             </div>
      </section>
     </main>  
+    </body>
+    <hr class="divider">
     <footer>
         <p>@2025 ABNASSER MOTORS. All rights reserved.</p>
     </footer>
