nav bar added above the footer

--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
                 <p class="imagetext">5 SEATER</p>
                 <p class="imagetext">Price: $19,5000</p>
             </div>
+            <div class="contact">
+                <nav>
+                    <ul>
+                        <li>Home</li>
+                        <li>Catalogue</li>
+                        <li>Financing</li> 
+                        <li>Contact</li>
+                    </ul>
+                </nav>
+            </div>
      </section>
     </main>  
     </body>
