text added to navigation bar

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
             <div class="contact">
                 <nav>
                     <ul>
-                        <li>Home</li>
-                        <li>Catalogue</li>
-                        <li>Financing</li> 
-                        <li>Contact</li>
+                        <li>CONTACT US</li>
+                        <li>TEL: +254 73 333 0000</li>
+                        <li>EMAIL:ABNASSERMOTORS@GMAIL </li> 
+                        <li>WHATSAPP; +254 11009191919</li>
                     </ul>
                 </nav>
             </div>
