styled the contact nav bar

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <p class="imagetext">5 SEATER</p>
                 <p class="imagetext">Price: $19,5000</p>
             </div>
-            <div class="contact">
+            <div class="contac">
                 <nav>
                     <ul>
                         <li>CONTACT US</li>
