--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
                 <p class="imagetext">TOYOTA COROLLA CROSS 2025</p>
                 <p class="imagetext">Engine: 2.0L FOUR CYLINDER</p>
                 <p class="imagetext">5 SEATER</p>
-                <p class="imagetext">Price: $19,5000</p>
+                <p class="imagetext">Price: $19,000</p>
             </div>
             <div class="car">
-                <img src="./images/Toyota Corolla Cross GR-Sport - BR version 2022.jpeg" alt="Image of Toyota corolla cross 2025"
+                <img src="./images/TOYOTA fortuner.jpeg" alt="Image of TOYOTA FORTUNER 2025 "
                  class="car-image">
-                <p class="imagetext">TOYOTA COROLLA CROSS 2025</p>
-                <p class="imagetext">Engine: 2.0L FOUR CYLINDER</p>
+                <p class="imagetext">TOYOTA FORTUNER 2025</p>
+                <p class="imagetext">Engine: 2.7L FOUR CYLINDER or 4.0L V6</p>
                 <p class="imagetext">5 SEATER</p>
-                <p class="imagetext">Price: $19,5000</p>
+                <p class="imagetext">Price: $32,000</p>
             </div>
             <div class="car">
                 <img src="./images/Toyota Corolla Cross GR-Sport - BR version 2022.jpeg" alt="Image of Toyota corolla cross 2025"
