image change and styling in image no.4

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <p class="imagetext">Price: $32,000</p>
             </div>
             <div class="car">
-                <img src="./images/Toyota Corolla Cross GR-Sport - BR version 2022.jpeg" alt="Image of Toyota RAV4 2025"
+                <img src="./images/Toyota RAV4 (1).jpeg" alt="Image of Toyota RAV4 2025"
                  class="car-image">
                 <p class="imagetext">TOYOTA RAV4 2025</p>
                 <p class="imagetext">Engine: 2.5L FOUR CYLINDER</p>
@@ -60,12 +60,12 @@
                 <p class="imagetext">Price: $26,500</p>
             </div>
             <div class="car">
-                <img src="./images/Toyota Corolla Cross GR-Sport - BR version 2022.jpeg" alt="Image of Toyota corolla cross 2025"
+                <img src="./images/Toyota Tacoma.jpeg" alt="Image of Toyota TACOMA 2025"
                  class="car-image">
-                <p class="imagetext">TOYOTA COROLLA CROSS 2025</p>
-                <p class="imagetext">Engine: 2.0L FOUR CYLINDER</p>
+                <p class="imagetext">TOYOTA TACOMA 2025</p>
+                <p class="imagetext">Engine: 2.4L FOUR CYLINDER</p>
                 <p class="imagetext">5 SEATER</p>
-                <p class="imagetext">Price: $19,5000</p>
+                <p class="imagetext">Price: $25,000</p>
             </div>
             <div class="car">
                 <img src="./images/Toyota Corolla Cross GR-Sport - BR version 2022.jpeg" alt="Image of Toyota corolla cross 2025"
