--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
                 <p class="imagetext">Price: $25,000</p>
             </div>
             <div class="car">
-                <img src="./images/Toyota Corolla Cross GR-Sport - BR version 2022.jpeg" alt="Image of Toyota corolla cross 2025"
+                <img src="./images/Toyota Corolla Cross GR-Sport - BR version 2022.jpeg" alt="Image of Toyota corolla 2025"
                  class="car-image">
-                <p class="imagetext">TOYOTA COROLLA CROSS 2025</p>
+                <p class="imagetext">TOYOTA COROLLA 2025</p>
                 <p class="imagetext">Engine: 2.0L FOUR CYLINDER</p>
                 <p class="imagetext">5 SEATER</p>
-                <p class="imagetext">Price: $19,5000</p>
+                <p class="imagetext">Price: $16,500</p>
             </div>
             <div class="car">
                 <img src="./images/Toyota Corolla Cross GR-Sport - BR version 2022.jpeg" alt="Image of Toyota corolla cross 2025"
