correction on last image

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <p class="imagetext">Price: $16,500</p>
             </div>
             <div class="car">
-                <img src="./images/Toyota Corolla Cross GR-Sport - BR version 2022.jpeg" alt="Image of Toyota Prius 2025"
+                <img src="./images/_ (2).jpeg" alt="Image of Toyota Prius 2025"
                  class="car-image">
                 <p class="imagetext">TOYOTA PRIUS 2025</p>
                 <p class="imagetext">Engine: 2.0L FOUR CYLINDER OR 161-HP ELECTRIC MOTOR</p>
